# airlock

./: .dockerignore  .gitignore  .worktreeinclude  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  airlock.toml  dev.dockerfile  entitlements.plist  ez.toml  install.sh  mise.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  publish-manual.yml  release.yml
app/airlock-cli/: Cargo.toml
app/airlock-cli/src/: assets.rs  cache.rs  cli.rs  cli_server.rs  config.rs  daemon.rs  diagnostics.rs  main.rs  masking.rs  network.rs  oci.rs  project.rs  rpc.rs  runtime.rs  settings.rs  util.rs  vault.rs  vm.rs
app/airlock-cli/src/cli/: cmd_exec.rs  cmd_rm.rs  cmd_secret.rs  cmd_show.rs  cmd_start.rs
app/airlock-cli/src/config/: load_config.rs
app/airlock-cli/src/config/presets/: alpine.toml  claude-code.toml  debian.toml  nodejs.toml  openai-codex.toml  python.toml
app/airlock-cli/src/config/tests/: mod.rs  test_daemons.rs  test_presets.rs
app/airlock-cli/src/config/tests/fixtures/: test-nested.toml  test-overlay.toml
app/airlock-cli/src/network/: check_target_conflicts.rs  control.rs  deny_reporter.rs  http.rs  io.rs  matchers.rs  middleware.rs  reverse_forward.rs  rules.rs  server.rs  target.rs  tcp.rs  tls.rs
app/airlock-cli/src/network/http/: middleware.rs
app/airlock-cli/src/network/tests/: helpers.rs  test_http.rs  test_middleware.rs
app/airlock-cli/src/oci/: docker.rs  gc.rs  layer.rs  registry.rs
app/airlock-cli/src/rpc/: logging.rs  network.rs  process.rs  stdin.rs  supervisor.rs
app/airlock-cli/src/runtime/: monitor_terminal.rs  raw_terminal.rs  signals.rs
app/airlock-cli/src/settings/: keys.rs
app/airlock-cli/src/vault/: disabled.rs  encrypted.rs  file.rs  keyring.rs
app/airlock-cli/src/vm/: apple.rs  cloud_hypervisor.rs  disk.rs  file_sync.rs
app/airlock-common/: Cargo.toml  build.rs
app/airlock-monitor/: Cargo.toml
app/airlockd/: Cargo.toml
app/airlockd/src/: daemon.rs  init.rs  logging.rs  main.rs  net.rs  process.rs  rpc.rs  stats.rs  util.rs
app/airlockd/src/admin/: deny_tracker.rs  mod.rs  routes.rs  server.rs  state.rs  tool_tracker.rs
app/airlockd/src/admin/routes/: claude_hook_post_tool_use.rs  claude_hook_post_tool_use_failure.rs  claude_hook_pre_tool_use.rs  root.rs
app/airlockd/src/init/: linux.rs
app/airlockd/src/init/linux/: ca.rs  clock.rs  container.rs  disk.rs  mount.rs  net.rs  overlay.rs
app/airlockd/src/net/: deny_status.rs  dns.rs  host_port_forward.rs  host_socket_forward.rs  mod.rs  proxy.rs  rpc_bridge.rs  socket.rs  tcp_proxy.rs  tun.rs
app/vm-kernel/: config-arm64  config-x86_64
cli/: Cargo.toml  build.rs
cli/src/: assets.rs  cache.rs  cli.rs  cli_server.rs  config.rs  constants.rs  error.rs  main.rs  mounts.rs  network.rs  oci.rs  project.rs  rpc.rs  terminal.rs  vm.rs
cli/src/assets/: mod.rs
cli/src/cli/: cmd_exec.rs  cmd_go.rs  cmd_project_info.rs  cmd_project_list.rs  cmd_project_remove.rs
cli/src/config/: de.rs  load_config.rs  presets.rs
cli/src/config/presets/: alpine.toml  arch.toml  claude-code.toml  codex.toml  copilot-cli.toml  debian.toml  fedora.toml  nodejs.toml  python.toml  rust.toml  suse.toml
cli/src/config/tests/: mod.rs  test_merge.rs
cli/src/config/tests/fixtures/: test-cycle-b.toml  test-diamond-base.toml  test-diamond-left.toml
cli/src/network/: http.rs  http_proxy.rs  io.rs  middleware.rs  mod.rs  rules.rs  scripting.rs  server.rs  target.rs  tcp.rs  tls.rs
cli/src/network/http/: body.rs  executor.rs  middleware.rs  senders.rs
cli/src/network/scripting/: connect_request.rs  http_request.rs
cli/src/network/tests/: helpers.rs  mod.rs  test_tls.rs
cli/src/oci/: cache.rs  config.rs  docker.rs  layer.rs  mod.rs  registry.rs
cli/src/oci/tests/: mod.rs  test_resolve_mounts.rs
cli/src/rpc/: client.rs  logging.rs  mod.rs  network.rs  process.rs  stdin.rs  supervisor.rs
cli/src/terminal/: mod.rs  resizes.rs  signals.rs  terminal.rs
cli/src/vm/: apple.rs  cloud_hypervisor.rs  config.rs  krun.rs  mod.rs  mounts.rs
crates/airlock/: Cargo.toml  build.rs
crates/airlockd/: Cargo.toml
crates/common/: Cargo.toml
crates/ez/: Cargo.toml  build.rs
crates/ezd/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/examples/: vt100_replay.rs
crates/tui/src/: app.rs  input.rs  lib.rs  pty.rs  ui.rs
crates/tui/src/tabs/: mod.rs  network.rs  sandbox.rs
crates/tui/src/tabs/monitor/: cpu.rs  histogram.rs  memory.rs  mod.rs
crates/tui/src/tabs/monitor/network/: chrome.rs  connections.rs  details.rs  mod.rs  requests.rs  row.rs
dev/: airlock.toml  docker-compose.yml
dev/.claude/: settings.json
dev/registry/: .gitignore  compose.yml  setup.sh
docs/: DESIGN.md  LOG.md
docs/log/: 2026-03-30-mvp-boot-a-linux-vm-with-interactive-shell.md  2026-03-31-single-binary-with-embedded-kernel-and-rootfs.md  2026-03-31-vsock-cap-n-proto-rpc-between-cli-and-supervisor.md  2026-04-01-pull-based-exec-protocol-with-pty-size-and-resize.md  2026-04-01-pull-oci-images-from-docker-hub-with-caching.md  2026-04-01-refactor-cli-and-supervisor-into-clean-modules.md  2026-04-01-route-shell-through-supervisor-pty-over-rpc.md  2026-04-01-run-alpine-container-via-crun-virtiofs.md  2026-04-02-add-directory-and-file-mounting-via-virtiofs.md  2026-04-02-wip-transparent-network-proxy-via-vsock.md  2026-04-03-expose-host-ports-to-the-vm.md  2026-04-03-forward-host-signals-to-vm-supervisor-tracing-via-rpc.md  2026-04-03-hierarchical-toml-configuration.md  2026-04-03-host-port-forwarding-entrypoint-args-pipe-mode.md  2026-04-03-http-request-interception-logging-improvements.md  2026-04-03-lua-network-scripting-rpc-deny-protocol.md  2026-04-03-virtual-dns-for-container-networking.md  (+130 more)
protocol/: Cargo.toml
sandbox/supervisor/: Cargo.toml  Dockerfile
sandbox/supervisor/src/: init.rs  logging.rs  main.rs  process.rs  rpc.rs  vsock.rs
sandbox/supervisor/src/init/: linux.rs
sandbox/supervisor/src/net/: dns.rs  mod.rs  proxy.rs  socket.rs  tls.rs
sandbox/supervisor/src/rpc/: mod.rs  process.rs  server.rs
src/: error.rs  main.rs
supervisor/: Cargo.toml
tests/: helpers.bash
(+268 files in other folders)
