[workspace]
members = ["app/airlock-cli", "app/airlock-common", "app/airlockd", "app/airlock-monitor"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"
libc = "0.2"
bytes = "1"
regex = "1"
hex = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = "1"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-stream = "0.3"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
console = "0.16"
indicatif = "0.18"
dialoguer = "0.12"

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
rustls-pemfile = "2"
rcgen = "0.14"

# HTTP
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"] }
http-body-util = "0.1"

# Cap'n Proto RPC
capnp = "0.25"
capnp-rpc = "0.25"
capnpc = "0.25"

# OCI
oci-client = "0.16"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
xattr = "1"

# Config
include_dir = "0.7.4"
smart-config = "0.4.0-pre.2"
subst = "0.3"
toml = "1"

# Scripting
mlua = { version = "0.11", features = ["luajit", "vendored", "anyhow", "async", "serialize"] }

# System
parking_lot = "0.12"
notify = "6"
sysinfo = { version = "0.38", features = ["system"] }
pty-process = { version = "0.5", features = ["async"] }

# Secrets
keyring = { version = "3", default-features = false }
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.9"

# DNS + cache
scc = "2"
simple-dns = "0.9"
quick_cache = "0.6"

# Userspace TCP/IP for TUN-based netns-transparent interception
smoltcp = { version = "0.13", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "socket-tcp",
] }

# TLS parsing
tls-parser = "0.12"

# Testing
axum = "0.8"
tower = "0.5"

# TUI
ratatui = "0.30"
terminput = "0.5"
terminput-crossterm = "0.4"
vt100 = "0.16"

# Internal
airlock-common = { path = "app/airlock-common" }
airlock-monitor = { path = "app/airlock-monitor" }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
inline_always = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
wildcard_imports = "allow"
similar_names = "allow"
