[package]
name = "ezpez-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ez"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
flate2 = "1"
hex = "0.4"
oci-client = "0.16"
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
capnp = { workspace = true }
capnp-rpc = { workspace = true }
ezpez-protocol = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSFileHandle", "NSString", "NSURL", "NSArray", "NSError", "NSDictionary"] }
objc2-virtualization = { version = "0.3", features = [
    "VZVirtualMachine",
    "VZVirtualMachineConfiguration",
    "VZLinuxBootLoader",
    "VZBootLoader",
    "VZVirtioConsoleDeviceSerialPortConfiguration",
    "VZVirtioConsoleDeviceConfiguration",
    "VZConsoleDeviceConfiguration",
    "VZFileHandleSerialPortAttachment",
    "VZSerialPortAttachment",
    "VZSerialPortConfiguration",
    "VZVirtioEntropyDeviceConfiguration",
    "VZEntropyDeviceConfiguration",
    "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
    "VZMemoryBalloonDeviceConfiguration",
    "VZGenericPlatformConfiguration",
    "VZPlatformConfiguration",
    "VZVirtioSocketDeviceConfiguration",
    "VZSocketDeviceConfiguration",
    "VZVirtioSocketDevice",
    "VZSocketDevice",
    "VZVirtioSocketConnection",
    "VZVirtioFileSystemDeviceConfiguration",
    "VZDirectorySharingDeviceConfiguration",
    "VZDirectoryShare",
    "VZSharedDirectory",
    "VZSingleDirectoryShare",
    "VZMultipleDirectoryShare",
    "block2",
    "dispatch2",
] }
block2 = "0.6"
dispatch2 = "0.3"
