[package]
name = "ezpez-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
dev = []

[[bin]]
name = "ez"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
ezpez-protocol = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
indicatif = { workspace = true }
libc = { workspace = true }
mlua = { workspace = true }
oci-client = { workspace = true }
rcgen = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
smart-config = { workspace = true }
sysinfo = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSFileHandle", "NSString", "NSURL", "NSArray", "NSError", "NSDictionary"] }
objc2-virtualization = { version = "0.3", features = [
    "VZVirtualMachine",
    "VZVirtualMachineConfiguration",
    "VZLinuxBootLoader",
    "VZBootLoader",
    "VZVirtioConsoleDeviceSerialPortConfiguration",
    "VZVirtioConsoleDeviceConfiguration",
    "VZConsoleDeviceConfiguration",
    "VZFileHandleSerialPortAttachment",
    "VZSerialPortAttachment",
    "VZSerialPortConfiguration",
    "VZVirtioEntropyDeviceConfiguration",
    "VZEntropyDeviceConfiguration",
    "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
    "VZMemoryBalloonDeviceConfiguration",
    "VZGenericPlatformConfiguration",
    "VZPlatformConfiguration",
    "VZVirtioSocketDeviceConfiguration",
    "VZSocketDeviceConfiguration",
    "VZVirtioSocketDevice",
    "VZSocketDevice",
    "VZVirtioSocketConnection",
    "VZVirtioFileSystemDeviceConfiguration",
    "VZDirectorySharingDeviceConfiguration",
    "VZDirectoryShare",
    "VZSharedDirectory",
    "VZSingleDirectoryShare",
    "VZMultipleDirectoryShare",
    "block2",
    "dispatch2",
] }
block2 = "0.6"
dispatch2 = "0.3"
