[package]
name = "airlock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
dev = []
# Build without bundled kernel/initramfs — requires vm.kernel and vm.initramfs
# to be set in the project config at runtime.
distroless = []

[[bin]]
name = "airlock"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
airlock-common = { workspace = true }
airlock-monitor = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
include_dir = { workspace = true }
indicatif = { workspace = true }
libc = { workspace = true }
mlua = { workspace = true }
notify = { workspace = true }
oci-client = { workspace = true }
parking_lot = { workspace = true }
quick_cache = { workspace = true }
rcgen = { workspace = true, features = ["pem", "x509-parser"] }
regex = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smart-config = { workspace = true }
subst = { workspace = true }
sysinfo = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
xattr = { workspace = true }
timeago = "0.6.0"
tls-parser = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
axum = { workspace = true }
rustls-pemfile = { workspace = true }
tower = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service", "crypto-rust", "vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }
security-framework = "3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSFileHandle", "NSString", "NSURL", "NSArray", "NSError", "NSDictionary"] }
objc2-virtualization = { version = "0.3", features = [
    "VZVirtualMachine",
    "VZVirtualMachineConfiguration",
    "VZLinuxBootLoader",
    "VZBootLoader",
    "VZVirtioConsoleDeviceSerialPortConfiguration",
    "VZVirtioConsoleDeviceConfiguration",
    "VZConsoleDeviceConfiguration",
    "VZFileHandleSerialPortAttachment",
    "VZSerialPortAttachment",
    "VZSerialPortConfiguration",
    "VZVirtioEntropyDeviceConfiguration",
    "VZEntropyDeviceConfiguration",
    "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
    "VZMemoryBalloonDeviceConfiguration",
    "VZGenericPlatformConfiguration",
    "VZPlatformConfiguration",
    "VZVirtioSocketDeviceConfiguration",
    "VZSocketDeviceConfiguration",
    "VZVirtioSocketDevice",
    "VZSocketDevice",
    "VZVirtioSocketConnection",
    "VZVirtioFileSystemDeviceConfiguration",
    "VZDirectorySharingDeviceConfiguration",
    "VZDirectoryShare",
    "VZSharedDirectory",
    "VZSingleDirectoryShare",
    "VZMultipleDirectoryShare",
    "VZVirtioBlockDeviceConfiguration",
    "VZStorageDeviceConfiguration",
    "VZDiskImageStorageDeviceAttachment",
    "VZStorageDeviceAttachment",
    "block2",
    "dispatch2",
] }
block2 = "0.6"
dispatch2 = "0.3"
