[package]
name = "airlockd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "airlockd"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
airlock-common = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
pty-process = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scc = { workspace = true }
simple-dns = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "process", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
