[package]
name = "airlock-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
airlock-protocol = { workspace = true }
anyhow = { workspace = true }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
crossterm = { workspace = true }
libc = { workspace = true }
ratatui = { workspace = true }
terminput = { workspace = true }
terminput-crossterm = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "time", "rt"] }
tracing = { workspace = true }
vt100 = { workspace = true }
