[package]
name = "ezpez-supervisor"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
ezpez-protocol = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
pty-process = { workspace = true }
scc = { workspace = true }
simple-dns = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "process", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
